@@ -241,3 +241,4 @@ Erik Wasser
 Tilman Koschnick
 Olivier 'Babar' Raginel
 Steve Rader
+Dieter Van de Walle
